src/css/custom.css
@import "/src/css/variable.css";
@import "/src/css/navbar.css";
@import "/src/css/footer.css";
@import "/src/css/hero.css";
@import "/src/css/searchbar.css";
@import "/src/css/markdown.css";

.main-wrapper {
    background: var(--ifm-color-primary);
}

.breadcrumbs__link {
    font-weight: 700;
}

.menu__link--active:not(.menu__link--sublist) {
    color: var(--ifm-menu-color-primary);
}

.menu__list-item-collapsible .menu__link:hover,
.menu__list-item-collapsible .menu__link--active {
    color: var(--ifm-menu-color-primary) !important;
}

.table-of-contents__link:hover,
.table-of-contents__link:hover code,
.table-of-contents__link--active,
.table-of-contents__link--active code {
    color: rgb(9 211 172);
    font-weight: 700;
}

@media screen and (max-width: 768px) {
    .row {
        gap: 1.5rem;
    }
}

@media screen and (max-width: 400px) {
    .searchBox_node_modules-\@docusaurus-theme-classic-lib-theme-Navbar-Search-styles-module {
        right: 4rem !important;
    }
}

